2007-02-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParser.py: fix a few bugs
	* src/DataViews/_PedigreeView.py: remove redundant call
	* src/PageView.py: remove redundant call
	* src/ViewManager.py: pylint fixes

2007-02-22  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* plugins/TestcaseGenerator.py: Generate new Note objects

2007-02-22  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (reindex_reference_map): Typo.
	* src/GrampsDb/_GrampsDbWriteXML.py (write_media_list): Typo.

2007-02-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_13): Add upgrade
	path for 2.2.x data;
	(commit_13): A low-level commit hack to aid in upgrade_13;
	(convert_notes_13): Recursive converter for the notes in each
	object and its note-capable child objects.

2007-02-21  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/MarkupText.py: raise error in case of parsing failure.
	* src/const.py.in: add argument support for debug switch.
	* src/ArgHandler.py (parse_arg): handle debug switch argument.

2007-02-20  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.dtd: Update DTD.
	* data/grampsxml.rng: Update schema.
	* src/GrampsDb/_GrampsDbWriteXML.py (write_xml_data): Place notes
	at the end.
	* src/GrampsDbUtils/_ReadXML.py (start_noteref): Add method;
	(__init__): Use new method.

2007-02-20  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_ReadGedcom.py: more cleanup
	* src/GrampsDbUtils/_GedcomTokens.py: more cleanup
	* src/GrampsDbUtils/_GedcomParse.py: Use the FAM->INDI mappings
	discovered in the StageOne parsing to fix missing relationships
	in Ancestry.com generated GEDCOM files.

2007-02-20  Benny malengier <bm@cage.ugent.be>
        * gramps_main.py : register_stock_icons
        * src/images: delete old icons
	* src/images/48x48/: new icons
	* src/images/22x22/: new icons
	* src/images/16x16/: new icons
	* src/images/scalable/: new icons